[package]
name = "lsn"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.5.42"
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.31"
log = "0.4.27"
log-panics = "2.1.0"
ratatui = "0.29.0"
simplelog = "0.12.2"
thiserror = "2.0.12"
tokio = { version = "1.47.1", features = ["full"] }
